--- a/research/01_data_ingestio.ipynb
+++ b/research/01_data_ingestio.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "id": "88756d2d",
    "metadata": {},
    "outputs": [],
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "id": "49c695e9",
    "metadata": {},
    "outputs": [
@@ -20,6 +20,38 @@
      "data": {
       "text/plain": [
        "'/home/rui/Desktop/New Folder/text-summarization/research'"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "%pwd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "0576b979",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## change directory to our root folder\n",
+    "os.chdir(\"../\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "1829b370",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'/home/rui/Desktop/New Folder/text-summarization'"
       ]
      },
      "execution_count": 4,
@@ -34,38 +66,6 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "0576b979",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "## change directory to our root folder\n",
-    "os.chdir(\"../\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "id": "1829b370",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'/home/rui/Desktop/New Folder/text-summarization'"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "%pwd"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
    "id": "de942f23",
    "metadata": {},
    "outputs": [],
@@ -111,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "id": "78b4ef75",
    "metadata": {},
    "outputs": [],
@@ -130,26 +130,127 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "id": "e9c0f84e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from textsummarizer.constants import *\n",
+    "from textsummarizer.utils.common import read_yml,create_directories\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "5ceb9894",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class ConfigurationManager:\n",
+    "    def __init__(\n",
+    "            self,\n",
+    "            config_filepath=CONFIG_FILE_PATH,\n",
+    "            params_filepath=PARAMS_FILE_PATH):\n",
+    "        \n",
+    "\n",
+    "        self.config=read_yml(config_filepath)\n",
+    "        self.params=read_yml(params_filepath)\n",
+    "\n",
+    "        create_directories([self.config.artifacts_root])\n",
+    "\n",
+    "\n",
+    "    def get_data_ingestion_config(self) ->DataIngestionConfig:\n",
+    "        config=self.config.data_ingestion\n",
+    "\n",
+    "        create_directories([config.root_dir])\n",
+    "\n",
+    "        data_ingestion_config= DataIngestionConfig(\n",
+    "            root_dir=config.root_dir,\n",
+    "            source_URL=config.source_URL,\n",
+    "            local_data_file=config.local_data_file,\n",
+    "            unzip_dir=config.unzip_dir\n",
+    "        )\n",
+    "\n",
+    "        return data_ingestion_config"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "89a81bb8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "import urllib.request as request\n",
+    "import zipfile\n",
+    "from textsummarizer.logging import logger\n",
+    "from textsummarizer.utils.common import get_size"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "b91c130e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class DataIngestion:\n",
+    "    def __init__(self,config:DataIngestionConfig):\n",
+    "        self.config=config\n",
+    "\n",
+    "    \n",
+    "    def download_file(self):\n",
+    "        if not os.path.exists(self.config.local_data_file):\n",
+    "            filename,headers=request.urlretrieve(\n",
+    "                url=self.config.source_URL,\n",
+    "                filename=self.config.local_data_file\n",
+    "            )\n",
+    "            logger.info(f\"{filename} download! with following info: \\n{headers}\")\n",
+    "        else:\n",
+    "            logger.info(f\"File already exist of size: {get_size(Path(self.config.local_data_file))} \")\n",
+    "\n",
+    "\n",
+    "    def extract_zip_file(self):\n",
+    "        \"\"\"\n",
+    "        zip_file_path : str\n",
+    "        Extract the zip file into the data directory\n",
+    "        Function returns None\n",
+    "        \"\"\"\n",
+    "\n",
+    "        unzip_path=self.config.unzip_dir\n",
+    "        os.makedirs(unzip_path,exist_ok=True) # creating director with name unzip_path\n",
+    "        with zipfile.ZipFile(self.config.local_data_file,'r') as zip_ref:\n",
+    "            zip_ref.extractall(unzip_path)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "95bd8eff",
    "metadata": {},
    "outputs": [
     {
-     "ename": "ImportError",
-     "evalue": "cannot import name 'ConfigBox' from 'box' (/home/rui/miniconda3/envs/textS/lib/python3.12/site-packages/box/__init__.py)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mImportError\u001b[39m                               Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[1]\u001b[39m\u001b[32m, line 2\u001b[39m\n\u001b[32m      1\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mtextsummarizer\u001b[39;00m\u001b[34;01m.\u001b[39;00m\u001b[34;01mconstants\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m *\n\u001b[32m----> \u001b[39m\u001b[32m2\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mtextsummarizer\u001b[39;00m\u001b[34;01m.\u001b[39;00m\u001b[34;01mutils\u001b[39;00m\u001b[34;01m.\u001b[39;00m\u001b[34;01mcommon\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m read_yml,create_directories\n",
-      "\u001b[36mFile \u001b[39m\u001b[32m~/Desktop/New Folder/text-summarization/src/textsummarizer/utils/common.py:6\u001b[39m\n\u001b[32m      4\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mtextsummarizer\u001b[39;00m\u001b[34;01m.\u001b[39;00m\u001b[34;01mlogging\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m logger\n\u001b[32m      5\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mensure\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m ensure_annotations\n\u001b[32m----> \u001b[39m\u001b[32m6\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mbox\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m ConfigBox\n\u001b[32m      7\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mpathlib\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m Path\n\u001b[32m      8\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mtyping\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m Any\n",
-      "\u001b[31mImportError\u001b[39m: cannot import name 'ConfigBox' from 'box' (/home/rui/miniconda3/envs/textS/lib/python3.12/site-packages/box/__init__.py)"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[2025-09-01 03:51:41,545: INFO : common : yaml file : config/config.yaml loaded successfully.]\n",
+      "[2025-09-01 03:51:41,547: INFO : common : yaml file : params.yaml loaded successfully.]\n",
+      "[2025-09-01 03:51:41,549: INFO : common : Created directory at : artifacts]\n",
+      "[2025-09-01 03:51:41,550: INFO : common : Created directory at : artifacts/data_ingestion]\n",
+      "[2025-09-01 03:51:41,550: INFO : 1018075320 : File already exist of size: ~ 8181 KB ]\n"
      ]
     }
    ],
    "source": [
-    "from textsummarizer.constants import *\n",
-    "from textsummarizer.utils.common import read_yml,create_directories\n"
+    "try: \n",
+    "    config= ConfigurationManager()\n",
+    "    data_ingestion_config= config.get_data_ingestion_config()\n",
+    "    data_ingestion=DataIngestion(config=data_ingestion_config)\n",
+    "    data_ingestion.download_file()\n",
+    "    data_ingestion.extract_zip_file()\n",
+    "except Exception as e:\n",
+    "    raise e"
    ]
   }
  ],
@@ -169,7 +270,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.11"
+   "version": "3.11.13"
   }
  },
  "nbformat": 4,
